# Visual-Translationo

./: .clang-format  .clang-tidy  .clangd  ReadMe.md  build_workspace.sh  et --hard a5ab818  merge_compile_commands.py  vision_serial_protocol_patch.md
Debug/: analyze_identification.py  analyze_tracker.py
Debug/Tracker/Blue/Anal/ekf/: ekf_updata.txt  origin.txt  preprocess200.txt
Debug/Tracker/Blue/ekf/: tracker_log.txt
DeepLearning/: add_dark_and_retrain.py  batch_inference.py  best.pth  inference_results.txt  number_cnn.onnx  test_augmentation.py  train.py  visualize.py
DeepLearning/output/: Zenet-sim-fixed.onnx  best.pth
DeepLearning/src/: train.py
src/armor_plate_bringup/: CMakeLists.txt  package.xml
src/armor_plate_bringup/launch/: auto_test.launch.py  run.launch.py  run.py  run_galaxy.launch.py  run_mind.launch.py  test.launch.py
src/armor_plate_bringup/rviz2/: rivz2.rviz
src/armor_plate_data_visualization/: CMakeLists.txt  package.xml
src/armor_plate_data_visualization/include/armor_plate_data_visualization/: ScatterPlot.hpp  ScatterPlotData.hpp
src/armor_plate_data_visualization/src/: DataVisualization.cpp  ScatterPlot.cpp  ScatterPlotData.cpp
src/armor_plate_identification/: CMakeLists.txt  package.xml
src/armor_plate_identification/config/: params.yaml
src/armor_plate_identification/env-hooks/: third_parties_lib_path.sh.in
src/armor_plate_identification/include/armor_plate_identification/: Armor.hpp  ArmorPlateIdentification.hpp  CameraDriver.hpp  DebugBase.hpp  DebugIdentifaction.hpp  DebugTest.hpp  Detector.hpp  DetectorArmor.hpp  DrawTarget.hpp  GuiWorker.hpp  MyKalmanFilter.hpp  NumberClassifier.hpp  PairedLights.hpp  PoseSolver.hpp  Recognize.hpp  SolvePnP.hpp  Test.hpp  TestFunc.hpp  Tracker.hpp
src/armor_plate_identification/launch/: auto_test.launch.py  run.launch.py  test.launch.py
src/armor_plate_identification/model/: label_cnn.txt  number_cnn.onnx
src/armor_plate_identification/src/: Armor.cpp  ArmorPlateIdentifcation.cpp  ArmorPlateIdentification.cpp  CameraDriver.cpp  DebugBase.cpp  DebugIdentifaction.cpp  DebugTest.cpp  Detector(before).cpp  Detector.cpp  DetectorArmor.cpp  DrawTarget.cpp  GuiWorker.cpp  MyKalmanFilter.cpp  NumberClassifier.cpp  PairedLights.cpp  PoseSolver.cpp  Recognize.cpp  SolvePnP.cpp  Test.cpp  TestFunc.cpp  Tracker.cpp
src/armor_plate_interfaces/: CMakeLists.txt  package.xml
src/armor_plate_interfaces/include/armor_plate_interfaces/: ArmorTypes.hpp
src/armor_plate_interfaces/msg/: AimCommand.msg  ArmorPlate.msg  ArmorPlates.msg  DebugTarcker.msg  DebugTracker.msg  GimbalAngle.msg  TrackerData.msg  TrackerDebug.msg
src/armor_plate_serial/: CMakeLists.txt  package.xml  test_crc  test_crc.cpp
src/armor_plate_serial/config/: params.yaml
src/armor_plate_serial/include/armor_plate_serial/: crc.hpp  packet.hpp
src/armor_plate_serial/launch/: run.launch.py
src/armor_plate_serial/src/: crc.cpp  rm_serial_driver.cpp  serial_node.cpp
src/armor_plate_tracker/: CMakeLists.txt  package.xml
src/armor_plate_tracker/config/: params.yaml
src/armor_plate_tracker/include/armor_plate_tracker/: CenterFilter.hpp  CenterKalmanFilter.hpp  CoordinateTransformer.hpp  DebugTracker.hpp  MyExtendedKalmanFilter.hpp  Tracker.hpp  TrackerArmor.hpp  YawKalmanFilter.hpp
src/armor_plate_tracker/launch/: run.launch.py
src/armor_plate_tracker/src/: ArmorPlateTracker.cpp  CenterFilter.cpp  CenterKalmanFilter.cpp  CoordinateTransformer.cpp  DebugTracker.cpp  MyExtendedKalmanFilter.cpp  MyKalmanFilter.cpp  Tracker.cpp  YawKalmanFilter.cpp
src/camera_capture/: CMakeLists.txt  package.xml
src/camera_capture/src/: CameraDriver.cpp  main.cpp
src/ros2_mindvision_camera/config/: camera_params.yaml
视觉电控协议/: vision_to_ec_min_protocol.md
