<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>armor_plate_interfaces</name>
  <version>0.0.0</version>
  <description>装甲板识别相关消息接口定义</description>
  <maintainer email="2719538332@qq.com">minzhi</maintainer>
  <license>TODO: License declaration</license>

  <!-- 构建工具依赖 -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ========================================
       接口生成依赖
       ======================================== -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  
  <!-- 本包消息依赖的其他消息包 -->
  <depend>geometry_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- 声明本包是 ROS 接口包，用于消息生成 -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
