<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>armor_plate_serial</name>
  <version>0.0.0</version>
  <description>Serial communication node for armor plate detection</description>
  <maintainer email="2719538332@qq.com">minzhi</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>armor_plate_interfaces</depend>
  <depend>serial_driver</depend>
  <depend>io_context</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
